[win32] Improve threadsafety

Based on patch from Chun-wei Fan.  Original patch comments:

Improve the thread-safety situation on Windows by only allowing the
pango_aliases_ht GHashTable be populated once.

Pango on Windows is not yet thread-safe, but with the thread safety
patch on Cairo-Win32-Font[1], it does seem that the test program
test-pangocairo-threads does not crash randomly anymore, which seems
to be an improvement.

[1]: https://bugs.freedesktop.org/show_bug.cgi?id=73012

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=695913